--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@react-navigation/native": "^5.9.2",
     "@react-navigation/stack": "^5.14.2",
     "react": "16.13.1",
-    "react-native": "0.63.4",
+    "react-native": ">=0.64.1"
     "react-native-elements": "^3.2.0",
     "react-native-gesture-handler": "^1.10.0",
     "react-native-htmlview": "^0.16.0",
